--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -209,6 +209,14 @@ header{
     margin-top: 20px;
 }
 
+.logo-black{
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
+
 
 .main-nav{
     float: right;
@@ -237,6 +245,31 @@ header{
     -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
+
+/******** STICKY MENU ********/
+
+.sticky{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.97);
+    box-shadow: 0 2px 1px #ebebeb;
+}
+
+.sticky .main-nav{
+    margin-top: 16px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+    color: #555;
+    padding: 20px 0;
+}
+
+.sticky .logo { display: none }
+.sticky .logo-black{ display: block }
+
 
 /**********************************************/
 /* FEATURE SECTION */
